--- a/org_estar_astrometry/Makefile
+++ b/org_estar_astrometry/Makefile
@@ -1,4 +1,4 @@
-include ../../../Makefile.common
+#include ../../../Makefile.common
 include ../Makefile.common
 #
 # Specfic options
@@ -8,7 +8,7 @@ PACKAGEDIR 	=org/$(ESTAR_NAME)/$(ASTROMETRY_NAME)
 PACKAGENAME	=org.$(ESTAR_NAME).$(ASTROMETRY_NAME)
 JAR_FILE	=org_$(ESTAR_NAME)_$(ASTROMETRY_NAME).jar
 JAVACFLAGS 	= -d $(LIBDIR) -sourcepath ../../../ -classpath $(LIBDIR):$(CLASSPATH)
-DOCSDIR 	= /home/dev/public_html/robonet/javadocs/$(PACKAGEDIR)
+DOCSDIR 	= $(ESTAR_DOC_HOME)/javadocs/$(PACKAGEDIR)
 
 SRCS = RA.java Dec.java CelestialObject.java CelestialObjectRMagnitudeComparator.java \
 	CelestialObjectVMagnitudeComparator.java CelestialObjectRADecComparator.java
